Learning/kubernetes/kubectl/path_based_routing_alb/alb_ingress_class.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: web-app-ingress-class
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: ingress.k8s.aws/alb
