Learning/kubernetes/kubectl/path_based_routing_alb/container_deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: deployment-nginx
  labels:
    app: deployment-nginx

spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-pod-nginx
  template:
    metadata:
      labels:
        app: my-pod-nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: workdir
          mountPath: /usr/share/nginx/html
      volumes:
      - name: workdir
        emptyDir: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-httpd
  labels: 
    app: deployment-httpd
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-pod-httpd
  template:
    metadata:
      labels:
        app: my-pod-httpd
    spec:
      containers:
      - name: httpd 
        image: httpd 
        ports:
        - containerPort: 80
        volumeMounts:
        - name: workdir2
          mountPath: /usr/local/apache2/htdocs/httpd
      volumes:
      - name: workdir2
        emptyDir: {}
