Learning/kubernetes/kubectl/path_based_routing_alb/node_port.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-nodeport-nginx
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /index.html
spec:
  type: NodePort
  selector:
    app: my-pod-nginx  
  ports:
    - name: http 
      port: 80
      targetPort: 80
---
apiVersion: v1 
kind: Service 
metadata:
  name: service-nodeport-httpd
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /index.html
spec:
  type: NodePort
  selector:
    app: my-pod-httpd
  ports:
    - name: http
      port: 80
      targetPort: 80
