Learning/kubernetes/kubectl/path_based_routing_alb/hostname_alb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hostname-ingress
  labels:
    app: app
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: appingress # ALB name
    alb.ingress.kubernetes.io/scheme: internet-facing # Internet exposed
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-code: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '20'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '5'
spec:
  ingressClassName: web-app-ingress-class
  rules:
    - host: nginx-italianodevops.duckdns.org
      http:
        paths:
          - path: / 
            pathType: Prefix
            backend: 
              service: 
                name: service-nodeport-nginx
                port: 
                  number: 80
    - host: http-italianodevops.duckdns.org  # 
      http:  
        paths:       
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-nodeport-httpd 
                port: 
                  number: 80

# nslookup appingress-183274598.eu-south-2.elb.amazonaws.com
# Server:         127.0.0.53
# Address:        127.0.0.53#53

# Non-authoritative answer:
# Name:   appingress-183274598.eu-south-2.elb.amazonaws.com
# Address: 51.94.254.148
# Name:   appingress-183274598.eu-south-2.elb.amazonaws.com
# Address: 15.217.17.90
# Name:   appingress-183274598.eu-south-2.elb.amazonaws.com
# Address: 15.216.119.228

#Then i just put the ip on duck dns page ¡ This approach is just to solve a home lab and won't be fine in an enterprise environment !
