Learning/kubernetes/kubectl/path_based_routing_alb/path_alb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: path-ingress
  labels:
    app: app
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: appingress # ALB name
    alb.ingress.kubernetes.io/scheme: internet-facing # Internet exposed
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-code: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '20'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '5'
spec:
  ingressClassName: web-app-ingress-class
  rules:
    - http: 
        paths:
          - path: / 
            pathType: Prefix
            backend: 
              service: 
                name: service-nodeport-nginx
                port: 
                  number: 80
          - path: /httpd 
            pathType: Prefix
            backend:
              service:
                name: service-nodeport-httpd 
                port: 
                  number: 80
